[project]
name = "comfyui-ergouzi-kaiguan"
description = "Group switching control, one click control to ignore and disable multiple groups, as well as wired switch combination nodes, allowing for arbitrary switching of annotation names"
version = "1.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/11dogzi/Comfyui-ergouzi-kaiguan"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "Comfyui-ergouzi-kaiguan"
Icon = ""
